<resources>
    <string name="app_name">Wanderlust</string>
    <string name="slogan">We will show you the world</string>
    <string name="powered_by">©Powered by Set-Group</string>
    <string name="restaurant">&#xf2e7;</string>
    <string name="credit_card">&#xf09d;</string>
    <string name="location">&#xf3c5;</string>
    <string name="gas_station">&#xf52f;</string>
    <string name="star">&#xf005;</string>
    <string name="get_direction">&#xf124;</string>
    <string name="search">&#xf002;</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>