<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:id="@+id/container"
    android:orientation="vertical"
    android:background="#f7fff7">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            android:background="@color/colorAccent"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <AutoCompleteTextView
                    android:id="@+id/autoComplete"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_input"
                    android:paddingLeft="10dp"
                    android:textSize="14dp"
                    android:hint="Try hospital"/>

                <TextView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/search"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_gravity="center"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/top_picks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@color/colorAccent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingTop="20dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_star"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Top Picks"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:paddingTop="20dp"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:layout_column="1"
                android:background="@color/colorAccent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/restaurant"
                        android:textSize="25dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Restaurant"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:paddingTop="20dp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/gasStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_column="0"
                android:background="@color/colorAccent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/gas_station"
                        android:textSize="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gas Station"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:paddingTop="20dp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_row="1"
                android:layout_column="1"
                android:background="@color/colorAccent"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                >

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:layout_gravity="center_vertical|center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:text="@string/credit_card"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ATM"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:paddingTop="20dp"
                        android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/current_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Location"
                        android:paddingStart="20dp"
                        android:textColor="#000"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:paddingLeft="20dp" />

                    <TextView
                        android:id="@+id/getLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingEnd="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/location"
                        android:textSize="20dp"/>

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="30dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:paddingRight="5dp"
                        android:visibility="gone"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</LinearLayout>